Update contact email in index.html and adjust font sizes in styles.css for better responsiveness

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     "@context": "https://schema.org",
     "@type": "Organization",
     "name": "Safna Safna",
-    "email": "sala@safnasafna.is"
+    "email": "steini@101seafood.is"
   }
   </script>
 </head>
@@ -82,11 +82,11 @@
             <!-- CTA -->
             <div class="mt-10">
               <a
-                href="mailto:sala@safnasafna.is?subject=Fyrirspurn um fjáröflun"
+                href="mailto:steini@101seafood.is,diddi@101seafood.is?subject=Fyrirspurn um fjáröflun"
                 aria-label="Senda tölvupóst til að hefja samtal um fjáröflun"
                 class="text-xl font-bold text-gray-900 hover:underline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black leading-tight"
               >
-              Hafðu samband á<br/>sala@safnasafna.is
+                Hafðu samband á<br/>steini@101seafood.is
               </a>
             </div>
 
