Update contact email in index.html to new address and enhance visibility with updated styling

--- a/src/index.html
+++ b/src/index.html
@@ -82,11 +82,11 @@
             <!-- CTA -->
             <div class="mt-10">
               <a
-                href="mailto:steini@101seafood.is,diddi@101seafood.is?subject=Fyrirspurn um fjáröflun"
+                href="mailto:sala@safnasafna.is?subject=Fyrirspurn um fjáröflun"
                 aria-label="Senda tölvupóst til að hefja samtal um fjáröflun"
                 class="text-xl font-bold text-gray-900 hover:underline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-black leading-tight"
               >
-                Hafðu samband á<br/>steini@101seafood.is
+                Hafðu samband á<br/><span class="underline text-xl font-bold text-gray-900">sala@safnasafna.is</span>
               </a>
             </div>
 
