Enhance Open Graph and Twitter Card metadata in index.html for improved social media sharing

--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,24 @@
   <link rel="canonical" href="https://safnasafna.is/">
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Safna Safna, hagkvæmar og vinsælar fjáröflanir">
+  <meta property="og:title" content="Safna Safna - Hagkvæmar og vinsælar fjáröflanir">
   <meta property="og:description" content="Safna Safna hjálpar íþróttafélögum og öðrum hópum að safna á einfaldan og vinsælan hátt. Hver eining skilar 2.000 kr. beint í fjáröflun.">
-  <meta property="og:image" content="https://safnasafna.is/assets/og-image.jpg">
   <meta property="og:type" content="website">
+  <meta property="og:url" content="https://safnasafna.is/">
+  <meta property="og:site_name" content="Safna Safna">
+  <meta property="og:locale" content="is_IS">
+  <meta property="og:image" content="https://safnasafna.is/assets/og-image.jpg">
+  <meta property="og:image:type" content="image/jpeg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="Safna Safna - Hagkvæmar og vinsælar fjáröflanir fyrir íþróttafélög">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Safna Safna - Hagkvæmar og vinsælar fjáröflanir">
+  <meta name="twitter:description" content="Safna Safna hjálpar íþróttafélögum og öðrum hópum að safna á einfaldan og vinsælan hátt. Hver eining skilar 2.000 kr. beint í fjáröflun.">
+  <meta name="twitter:image" content="https://safnasafna.is/assets/og-image.jpg">
+  <meta name="twitter:image:alt" content="Safna Safna - Hagkvæmar og vinsælar fjáröflanir fyrir íþróttafélög">
 
   <!-- Favicon -->
   <link rel="icon" href="/assets/favicon.ico">
